@@ -1,3 +1,7 @@
+* 2014-04-25 - marc.arens@open-xchange.com
+
+ - Fix for bug 32127: Don't send keepalive pings/processing while reading data from upstream
+ 
 * 2014-04-10 - marc.arens@open-xchange.com
 
  - Fix for bug 31942: Fix for unconsumed request remainders and configure that we want to accept payloads for methods where a payload is currently undefined but not forbidden.
